@@ -2,6 +2,11 @@
 #+link:    compat-gh   https://github.com/emacs-compat/compat/issues/
 #+options: toc:nil num:nil author:nil
 
+* Development
+
+- compat-29: Add ~directory-abbrev-apply~.
+- compat-29: Add ~directory-abbrev-make-regexp~.
+
 * Release of "Compat" Version 29.1.4.0
 
 - compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
